deployments/rancher/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.rancher.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: rancher-service
          port: 9000
    - match: Host(`rancher.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: rancher-service
          port: 9000
      middlewares:
        - name: rancher-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
